Corrected horizontal scrolling behavior by removing vertical borders from content div

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 body, html {
     height: 100%;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -169,23 +171,17 @@ a {
 
     top:0;
     left:0;
-    width:100vw;
+    width:100%;
     height:100%;
     z-index:-1;
 }
 
 .content {
-    width:100vw;
+    width:100%;
     max-width:1920px;
     margin: auto;
 
-    border-top:0;
-    border-bottom:0;
-    border-left: 2px;
-    border-right: 2px;
-    border-style: solid;
-    /* 	border-image: linear-gradient(to bottom, #ccc, #555 66%, #181818) 1 100%; */
-    border-image: linear-gradient(to bottom, #95572c, #edaa4e, #95572c) 1 100%;
+
     text-align: center;
 }
 
@@ -342,7 +338,7 @@ p.footer {
     text-align: left;
     padding: .5em;
     border-radius: 1em;
-    background-color: rgba(163, 186, 139, 0.73);
+    background-color: rgba(163, 186, 139, 0.8);
 }
 
 .citypic{
